Adds a couple TODOs.

--- a/jekyll-site-src/_css_src/components/_code.scss
+++ b/jekyll-site-src/_css_src/components/_code.scss
@@ -1,3 +1,6 @@
+// TODO(shyndman): This file is leftover from the legacy site. A refactor to
+// bring up to date is necessary.
+
 // Globals used in this file
 $code-background-color: $black-05;
 $code-divider-color: $black-10;
