Increases emphasis on the selected drawer nav item.
Changes weight to medium.

--- a/jekyll-site-src/_css_src/_constants.scss
+++ b/jekyll-site-src/_css_src/_constants.scss
@@ -14,6 +14,7 @@ $grey-200: #eee;
 $grey-300: #e0e0e0;
 $grey-400: #bdbdbd;
 $grey-600: #757575;
+$grey-700: #616161;
 $grey-800: #424242;
 $grey-900: #212121;
 $indigo-500: #3f51b5;
