Replaces local jQuery in Jazzy docs with Google-hosted version.

--- a/ios-api-docs-src/theme/templates/doc.mustache
+++ b/ios-api-docs-src/theme/templates/doc.mustache
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="../../../{{path_to_root}}css/api.css" />
 
     <meta charset="utf-8">
-    <script src="{{path_to_root}}js/jquery.min.js" defer></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js" defer></script>
     <script src="{{path_to_root}}js/jazzy.js" defer></script>
     {{{custom_head}}}
   </head>
