Adds platform modifiers to all page layouts.

--- a/jekyll-site-src/_layouts/landing-no-drawer.html
+++ b/jekyll-site-src/_layouts/landing-no-drawer.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html class="mdc-typography">
   {% include head.html %}
-  <body class="page page--landing-no-drawer page--{{ page.section }}">
+  <body class="page page--landing-no-drawer page--{{ page.section }} page--platform-{{ page.site_platform }}">
     {% include toolbar.html
         title=page.site_title
         short_title=page.site_short_title
