--- a/jekyll-site-src/_css_src/components/_page.scss
+++ b/jekyll-site-src/_css_src/components/_page.scss
@@ -49,6 +49,50 @@
     }
   }
 
+  &--unsupported-browser {
+    align-items: center;
+    justify-content: center;
+
+    height: 100%;
+    min-height: 0;
+    margin: 0;
+
+    background: $grey-900;
+    color: $white;
+
+    > h1 {
+      display: flex;
+      align-items: center;
+
+      font-family: Roboto Mono;
+      font-weight: 400;
+      font-size: 1.25rem;
+
+      height: 32px;
+      margin-bottom: 16px;
+      text-transform: uppercase;
+      white-space: nowrap;
+
+      &::before {
+        content: '';
+        display: inline-block;
+
+        background-image: url('/images/mdc-logo.svg');
+        background-size: cover;
+
+        width: 32px;
+        height: 32px;
+        margin-right: 16px;
+      }
+    }
+
+    a {
+      @include link-styles {
+        color: $white;
+      }
+    }
+  }
+
   @include media-small {
     min-height: calc(100vh + #{$mobile-footer-height});
 
