Adds a minimum width to icon list item's icons.

--- a/jekyll-site-src/_css_src/components/_icon-list.scss
+++ b/jekyll-site-src/_css_src/components/_icon-list.scss
@@ -16,7 +16,7 @@
     content: '';
 
     background-size: 24px;
-    width: 24px;
+    min-width: 24px;
     height: 24px;
     margin-right: 20px;
   }
