--- a/jekyll-site-src/_includes/toolbar-nav.html
+++ b/jekyll-site-src/_includes/toolbar-nav.html
@@ -27,12 +27,29 @@
           <span class="toolbar-nav-link__text">Components</span>
         </a>
       </li>
-      <li>
+      <li class="mdc-menu-anchor">
         <a href="{{ page.basepath }}/docs/"
-           class="toolbar-nav-link
+           class="toolbar-nav-link toolbar-nav-link--desktop
                {% if page.section == 'docs' %}toolbar-nav-link--active{% endif %}">
           <span class="toolbar-nav-link__text">Documentation</span>
         </a>
+        <button class="toolbar-nav-link toolbar-nav-link--mobile
+            {% if page.section == 'docs' %}toolbar-nav-link--active{% endif %}">
+          Documentation
+        </button>
+
+        <div class="toolbar-platform-chooser__menu mdc-simple-menu" tabindex="-1">
+          <ul class="mdc-simple-menu__items mdc-list" role="menu" aria-hidden="true">
+            {% for nav_item in page.nav_sections.docs %}
+              <li class="mdc-list-item"
+                  role="menuitem"
+                  tabindex="0"
+                  data-href="{{ page.site_root }}{{ page.basepath }}{{ nav_item.url }}">
+                {{ nav_item.title }}
+              </li>
+            {% endfor %}
+          </ul>
+        </div>
       </li>
     {% endif %}
     <li>
