--- a/jekyll-site-src/_includes/drawer-nav-item.html
+++ b/jekyll-site-src/_includes/drawer-nav-item.html
@@ -2,7 +2,7 @@
   <a class="drawer-list__link
             {% if include.nav_item.url == page.path %}drawer-list__link--active{% endif %}"
      {% if include.nav_item.url %}
-       href="{{ page.basepath }}{{ include.nav_item.url }}"
+       href="{{ site.rootpath }}{{ page.basepath }}{{ include.nav_item.url }}"
      {% endif %}>
     {{ include.nav_item.title }}
   </a>
