--- a/jekyll-site-src/_includes/head.html
+++ b/jekyll-site-src/_includes/head.html
@@ -24,8 +24,8 @@
   <meta name="msapplication-tap-highlight" content="no">
 
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,400i,500|Roboto+Mono:400,500" rel="stylesheet" type="text/css">
-  <link rel="stylesheet" href="/css/codemirror.css">
-  <link rel="stylesheet" href="/css/app.css">
+  <link rel="stylesheet" href="{{ site.rootpath }}/css/codemirror.css">
+  <link rel="stylesheet" href="{{ site.rootpath }}/css/app.css">
 
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@materialdesign">
