--- a/jekyll-site-src/_includes/redirect-page.html
+++ b/jekyll-site-src/_includes/redirect-page.html
@@ -1,4 +1,4 @@
 <script>
-const url = '{{ page.site_root }}{{ page.basepath }}{{ page.redirect_path }}';
+const url = '{{ site.rootpath }}{{ page.basepath }}{{ page.redirect_path }}';
 window.location.replace(url);
 </script>
