--- a/jekyll-site-src/_includes/toolbar-platform-chooser.html
+++ b/jekyll-site-src/_includes/toolbar-platform-chooser.html
@@ -9,19 +9,19 @@
       <li class="mdc-list-item"
           role="menuitem"
           tabindex="0"
-          data-href="{{ page.site_root }}/android">
+          data-href="{{ site.rootpath }}/android">
         Android
       </li>
       <li class="mdc-list-item"
           role="menuitem"
           tabindex="0"
-          data-href="{{ page.site_root }}/ios">
+          data-href="{{ site.rootpath }}/ios">
         iOS
       </li>
       <li class="mdc-list-item"
           role="menuitem"
           tabindex="0"
-          data-href="{{ page.site_root }}/web">
+          data-href="{{ site.rootpath }}/web">
         Web
       </li>
     </ul>
