--- a/jekyll-site-src/_css_src/components/_component-icons.scss
+++ b/jekyll-site-src/_css_src/components/_component-icons.scss
@@ -41,12 +41,12 @@ $icon-ids:
   width: 96px;
   height: 96px;
   margin-bottom: 24px;
-  background: center/100% url('/images/component_icons/ic_component_24px.svg');
+  background: center/100% url('#{$rootpath}/images/component_icons/ic_component_24px.svg');
 }
 
 @each $icon-id in $icon-ids {
   .page--components.page--detail .article.article--icon-#{$icon-id} h1::before,
   .page--components .component-list-item--icon-#{$icon-id} > .component-list-item__link::before {
-    background-image: url('/images/component_icons/#{$icon-id}.svg');
+    background-image: url('#{$rootpath}/images/component_icons/#{$icon-id}.svg');
   }
 }
