--- a/jekyll-site-src/_includes/scripts.html
+++ b/jekyll-site-src/_includes/scripts.html
@@ -1,4 +1,4 @@
-<script src="/js/index.js" async></script>
+<script src="{{ site.rootpath }}/js/index.js" async></script>
 <script src="https://www.gstatic.com/feedback/api.js" async></script>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
