--- a/ios-api-docs-src/theme/templates/doc.mustache
+++ b/ios-api-docs-src/theme/templates/doc.mustache
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <title>{{name}} {{kind}} Reference</title>
-    <link rel="stylesheet" type="text/css" href="{{path_to_root}}css/jazzy.css" />
-    <link rel="stylesheet" type="text/css" href="{{path_to_root}}css/highlight.css" />
-    <link rel="stylesheet" type="text/css" href="../../../{{path_to_root}}css/api.css" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,400i,500|Roboto+Mono:400,500" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" type="text/css" href="{{path_to_root}}css/jazzy.css">
+    <link rel="stylesheet" type="text/css" href="{{path_to_root}}css/highlight.css">
 
     <meta charset="utf-8">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js" defer></script>
