--- a/ios-api-docs-src/theme/templates/doc.mustache
+++ b/ios-api-docs-src/theme/templates/doc.mustache
@@ -3,13 +3,21 @@
   <head>
     <title>{{name}} {{kind}} Reference</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,400i,500|Roboto+Mono:400,500" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" type="text/css" href="{{path_to_root}}css/jazzy.css">
-    <link rel="stylesheet" type="text/css" href="{{path_to_root}}css/highlight.css">
+    <link rel="stylesheet" type="text/css" href="{{custom_head}}/css/jazzy.css">
+    <link rel="stylesheet" type="text/css" href="{{custom_head}}/css/jazzy-highlight.css">
 
     <meta charset="utf-8">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js" defer></script>
-    <script src="{{path_to_root}}js/jazzy.js" defer></script>
-    {{{custom_head}}}
+    <script src="{{custom_head}}/js/jazzy.js" defer></script>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-90255304-1', 'auto');
+      ga('send', 'pageview');
+    </script>
   </head>
   <body>
     {{#dash_type}}
@@ -22,7 +30,9 @@
 
     <p class="breadcrumbs">
       <a class="breadcrumb" href="../{{path_to_root}}">{{module_name}} Reference</a>
-      <img class="carat" src="{{path_to_root}}img/carat.png" />
+      <svg class="caret" xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" viewBox="0 0 24 24">
+        <path d="M8.59 16.34l4.58-4.59-4.58-4.59L10 5.75l6 6-6 6z"/>
+      </svg>
       {{name}} {{kind}} Reference
     </p>
 
@@ -48,6 +58,7 @@
 
       </article>
     </div>
+
     {{> footer}}
   </body>
 </div>
