--- a/jekyll-site-src/_layouts/landing.html
+++ b/jekyll-site-src/_layouts/landing.html
@@ -16,6 +16,7 @@
 
     {% include footer.html %}
     {% include frontend-templates.html %}
+    {% include feedback.html %}
     {% include scripts.html %}
   </body>
 </html>
