--- a/jekyll-site-src/_includes/toolbar-nav.html
+++ b/jekyll-site-src/_includes/toolbar-nav.html
@@ -2,19 +2,19 @@
   <ul class="toolbar-nav__links">
     {% if include.is_root %}
       <li>
-        <a href="{{ site.rootpath }}android/"
+        <a href="{{ site.rootpath }}/android/"
            class="toolbar-nav-link toolbar-nav-link--platform">
           <span class="toolbar-nav-link__text">Android</span>
         </a>
       </li>
       <li>
-        <a href="{{ site.rootpath }}ios/"
+        <a href="{{ site.rootpath }}/ios/"
            class="toolbar-nav-link toolbar-nav-link--platform">
           <span class="toolbar-nav-link__text">iOS</span>
         </a>
       </li>
       <li>
-        <a href="{{ site.rootpath }}web/"
+        <a href="{{ site.rootpath }}/web/"
            class="toolbar-nav-link toolbar-nav-link--platform">
           <span class="toolbar-nav-link__text">Web</span>
         </a>
