--- a/jekyll-site-src/_css_src/components/_codelab.scss
+++ b/jekyll-site-src/_css_src/components/_codelab.scss
@@ -1,15 +1,15 @@
 .codelab-hint {
-  background: rgba(0,230,118,.1);
+  background: rgba(0, 230, 118, .1);
   padding: 3px 24px;
 }
 .codelab-warning {
-  background: rgba(255,23,68,.1);
+  background: rgba(255, 23, 68, .1);
   padding: 3px 24px;
 }
 .codelab-duration {
   font-family: 'Roboto Mono', monospace;
-  color: rgba(0,0,0,0.5);
+  color: rgba(0, 0, 0, 0.5);
 }
 .codelab-img img {
-  border: 0.5px solid rgba(0,0,0,0.5);
+  border: 0.5px solid rgba(0, 0, 0, 0.5);
 }
