Integrates Consumer Surveys.

--- a/ios-api-docs-src/theme/templates/doc.mustache
+++ b/ios-api-docs-src/theme/templates/doc.mustache
@@ -18,6 +18,7 @@
       ga('create', 'UA-90255304-1', 'auto');
       ga('send', 'pageview');
     </script>
+    <script async="" defer="" src="//www.google.com/insights/consumersurveys/async_survey?site=znr647dh46pklceehuqef2fsua"></script>
   </head>
   <body>
     {{#dash_type}}
