--- a/jekyll-site-src/_includes/head.html
+++ b/jekyll-site-src/_includes/head.html
@@ -32,4 +32,6 @@
   <meta name="twitter:title" content="Material Components">
   <meta name="twitter:description" content="Create beautiful apps with modular and customizable UI components">
   <meta name="twitter:image" content="https://material.io/static/images/simple-lp/components-share.png">
+
+  <script async="" defer="" src="//www.google.com/insights/consumersurveys/async_survey?site=znr647dh46pklceehuqef2fsua"></script>
 </head>
