Tightens up welcome links below 720px.

--- a/jekyll-site-src/_css_src/components/_welcome-link-list.scss
+++ b/jekyll-site-src/_css_src/components/_welcome-link-list.scss
@@ -33,5 +33,9 @@
     &:hover::after {
       transform: translateY(3px);
     }
+
+    @media(max-width: $tight-welcome-links-max-width) {
+      margin-right: -12px;
+    }
   }
 }
