--- a/jekyll-site-src/_css_src/_constants.scss
+++ b/jekyll-site-src/_css_src/_constants.scss
@@ -42,6 +42,7 @@ $toolbar-text-color: $white;
 $toolbar-height: 72px;
 $mobile-toolbar-height: 96px;
 $mobile-toolbar-max-width: 640px;
+$tight-welcome-links-max-width: 820px;
 
 $homepages: (platform-android android)
             (platform-ios ios)
