Adds support for images on Flutter's homepage

--- a/jekyll-site-src/_css_src/_constants.scss
+++ b/jekyll-site-src/_css_src/_constants.scss
@@ -47,6 +47,7 @@ $tight-welcome-links-max-width: 820px;
 $homepages: (platform-android android)
             (platform-ios ios)
             (platform-web web)
+            (platform-flutter flutter)
             (root root);
 
 // MDC overrides
