--- a/jekyll-site-src/_css_src/components/_welcome.scss
+++ b/jekyll-site-src/_css_src/components/_welcome.scss
@@ -29,7 +29,8 @@
       background-image: url('#{$rootpath}/images/welcome/android.svg');
     }
 
-    #{$component}--platform-ios &::after {
+    #{$component}--platform-ios &::after,
+    #{$component}--platform-flutter &::after {
       background-image: url('#{$rootpath}/images/welcome/ios.svg');
     }
 
