--- a/jekyll-site-src/_includes/welcome.html
+++ b/jekyll-site-src/_includes/welcome.html
@@ -14,6 +14,7 @@
           <li class="welcome-link-list-item"><a href="{{ site.rootpath }}/android/">ANDROID</a></li>
           <li class="welcome-link-list-item"><a href="{{ site.rootpath }}/ios/">iOS</a></li>
           <li class="welcome-link-list-item"><a href="{{ site.rootpath }}/web/">WEB</a></li>
+          <li class="welcome-link-list-item"><a href="{{ site.rootpath }}/flutter/">FLUTTER</a></li>
         </ul>
       {% else %}
         <ul class="welcome__links welcome-link-list">
