Reduces welcome graphic min-width, to accommodate Flutter.

--- a/jekyll-site-src/_css_src/components/_welcome.scss
+++ b/jekyll-site-src/_css_src/components/_welcome.scss
@@ -46,6 +46,7 @@
         background-position: top left;
         background-image: url('#{$rootpath}/images/welcome/root.svg');
         margin: 158px 48px 0 0;
+        min-width: 238px;
       }
     }
 
