--- a/jekyll-site-src/_includes/toolbar-nav.html
+++ b/jekyll-site-src/_includes/toolbar-nav.html
@@ -19,37 +19,61 @@
           <span class="toolbar-nav-link__text">Web</span>
         </a>
       </li>
+      <li>
+        <a href="{{ site.rootpath }}/flutter/"
+            class="toolbar-nav-link toolbar-nav-link--platform">
+          <span class="toolbar-nav-link__text">Flutter</span>
+        </a>
+      </li>
     {% else %}
       <li>
-        <a href="{{ site.rootpath }}{{ page.basepath }}/catalog/"
+        <a href="
+            {% if page.components_url %}
+              {{ page.components_url }}
+            {% else %}
+              {{ site.rootpath }}{{ page.basepath }}/catalog/
+            {% endif %}"
            class="toolbar-nav-link
                {% if page.section == 'components' %}toolbar-nav-link--active{% endif %}">
           <span class="toolbar-nav-link__text">Components</span>
         </a>
       </li>
       <li class="mdc-menu-anchor">
-        <a href="{{ site.rootpath }}{{ page.basepath }}/docs/"
-           class="toolbar-nav-link toolbar-nav-link--desktop
+        <a href="
+            {% if page.documentation_url %}
+              {{ page.documentation_url }}
+            {% else %}
+              {{ site.rootpath }}{{ page.basepath }}/docs/
+            {% endif %}"
+            class="toolbar-nav-link toolbar-nav-link--desktop
                {% if page.section == 'docs' %}toolbar-nav-link--active{% endif %}">
           <span class="toolbar-nav-link__text">Documentation</span>
         </a>
-        <button class="toolbar-nav-link toolbar-nav-link--mobile
-            {% if page.section == 'docs' %}toolbar-nav-link--active{% endif %}">
-          Documentation
-        </button>
 
-        <div class="toolbar-platform-chooser__menu mdc-simple-menu" tabindex="-1">
-          <ul class="mdc-simple-menu__items mdc-list" role="menu" aria-hidden="true">
-            {% for nav_item in page.nav_sections.docs %}
-              <li class="mdc-list-item"
-                  role="menuitem"
-                  tabindex="0"
-                  data-href="{{ site.rootpath }}{{ page.basepath }}{{ nav_item.url }}">
-                {{ nav_item.title }}
-              </li>
-            {% endfor %}
-          </ul>
-        </div>
+        {% if page.documentation_url %}
+          <a href="{{ page.documentation_url }}"
+              class="toolbar-nav-link toolbar-nav-link--mobile">
+            <span class="toolbar-nav-link__text">Documentation</span>
+          </a>
+        {% else %}
+          <button class="toolbar-nav-link toolbar-nav-link--mobile
+              {% if page.section == 'docs' %}toolbar-nav-link--active{% endif %}">
+            Documentation
+          </button>
+
+          <div class="toolbar-platform-chooser__menu mdc-simple-menu" tabindex="-1">
+            <ul class="mdc-simple-menu__items mdc-list" role="menu" aria-hidden="true">
+              {% for nav_item in page.nav_sections.docs %}
+                <li class="mdc-list-item"
+                    role="menuitem"
+                    tabindex="0"
+                    data-href="{{ site.rootpath }}{{ page.basepath }}{{ nav_item.url }}">
+                  {{ nav_item.title }}
+                </li>
+              {% endfor %}
+            </ul>
+          </div>
+        {% endif %}
       </li>
     {% endif %}
     <li>
