Adds Flutter to the platform chooser.

--- a/jekyll-site-src/_includes/toolbar-platform-chooser.html
+++ b/jekyll-site-src/_includes/toolbar-platform-chooser.html
@@ -24,6 +24,12 @@
           data-href="{{ site.rootpath }}/web">
         Web
       </li>
+      <li class="mdc-list-item"
+          role="menuitem"
+          tabindex="0"
+          data-href="{{ site.rootpath }}/flutter">
+        Flutter
+      </li>
     </ul>
   </div>
 </div>
